# sph

./: .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  ev.3  hook.h  libjac-0.1.pc.in  mod.h  socket.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  buffer.c  buffer.h  config.c  config.h  jacques.h  list.c  list.h  loop.c  loop.h  mod.c  mod.h  socket.c  socket.h  sph-0.1.pc.in  sph.h  sph.pc.in  utils.c  utils.h
test/: Makefile.am  Makefile.in  test-mod.c  test-mod.so.c
tests/: Makefile.am  Makefile.in  test-buffer.c  test-config.c  test-config.conf  test-mod.c  test_mod.so.c
